--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html{
   height: 100%;
   font-size: 1rem; /* --changed-- */
   font-family: 'Open Sans', sans-serif;
-  background-color: rgb(236, 234, 234);
+  background-color: rgb(255, 255, 255);
   color:black;
 }
 body{
@@ -27,7 +27,7 @@ a{
 }
 
 /* ---------------- NavBar --------------- */
-nav{
+.navigation{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -41,7 +41,7 @@ nav{
 }
 
 #home{
-  margin-top: 5px;
+  margin-top: 15px;
   margin-left: 10px;
   margin-right: 10px;
   font-size: 1.25rem; /* --changed-- */
@@ -56,7 +56,7 @@ nav{
 }
 
 #result{
-  margin-top: 0px;;
+  margin-top: 10px;;
   margin-left: 25px;
   font-size: 1.25rem; /* --changed-- */
   font-weight: 600;
@@ -68,35 +68,30 @@ nav{
 
 /* ---------------- Body --------------- */
 #card_id, #table_id{
-  box-shadow: 5px 10px 18px #7a7979;
+  box-shadow: 5px 10px 18px #6b6a6a;
 }
 
 #main_card1, #main_card2{
   border: 2px solid rgb(255, 255, 255);
-  /* box-shadow: 5px 10px 18px #7a7979; */
   margin-top: 20px;
 }
 
 /* -- Static Part -- */
 
 #title{
-  font-size: 0.75rem; /* --changed-- */
+  font-size: 1rem; /* --changed-- */
   font-weight: 500;
   text-transform: uppercase;
   text-align: center;
 }
 
 #auction, #bid{
-  font-size: 0.75rem; /* --changed-- */
-  font-weight: 500;
+  font-size: 1rem; /* --changed-- */
+  font-weight: 400;
   text-transform: capitalize;
 }
 
 /* -- Dynamic Part -- */
-
-#card_body{
-  border: 2px solid #ff0303;
-}
 
 #table_header{
   font-size: 1.5rem; /* --changed-- */
@@ -137,7 +132,7 @@ nav{
   margin-top: 5px;
   width: 100%;
   height: 10vh;
-  font-size: 2.25rem; /* --changed-- */
+  font-size: 2rem; /* --changed-- */
   font-weight: 500;
   text-transform: uppercase;
 }
@@ -153,31 +148,135 @@ nav{
 #bid_btn{
   margin-top: 8px;
   width: 100%;
-  height: 14vh;
+  height: 16vh;
   font-size: 2.25rem; /* --changed-- */
   font-weight: 500;
   text-transform: uppercase;
 }
 
 
-/* ------changes----- */
+/* -------------------------------------- Changes Starts Here --------------------------------------- */
 
-
+#card1{
+  height: 23vh;
+  box-shadow: 5px 10px 18px #6b6a6a;
+}
 #row_id{
   height: 46vh;
 }
 
-/* -------Auctioneer Page------- */
+/* -------Auctioneer & Bidder Page------- */
 
-/* @media (max-width:1440px) {
-  /* max-height:537px 
-  #row_id{
+@media (width:1440px) {
+  body{
+    height: 537px;
+  }
+  #home, #result, #auctioneer{
+    font-size: 1rem;
+  }
+  #main_card1{
+    height: 25vh;
+  }
+  #card1{
+    height: 25vh;
+  }
+  #title{
+    font-size: 0.9rem;
+  } 
+  #auction, #bid{
+    font-size: 0.9rem;
+  }
+  #main_card2{
+    height: 52vh;
+  }
+  #card_id{
+    height: 52vh;
+  }
+  #card2{
     height: 30vh;
   }
+  #round_id, #time_id{
+    font-size: 1.25rem;
+  }
+  #round, #time{
+    font-size: 3.2rem;
+  }
+  #start{
+    font-size: 1.5rem;
+    height: 10vh;
+  }
+  #next{
+    font-size: 1rem;
+    height: 6vh;
+  }
+  #table_header{
+    font-size: 1.25rem;
+  }
+  #row_id{
+    font-size: 1.25rem;
+    height: 43vh;
+  }
 } 
-*/
 
-@media (width:2560px) {
+@media (width: 1920px) {
+  body{
+    height: 1080px;
+  }
+  #home, #result, #auctioneer{
+    font-size: 2rem;
+  }
+  #main_card1{
+    height: 28vh;
+  }
+  #card1{
+    height: 25vh;
+  }
+  #title{
+    font-size: 1.8rem;
+  } 
+  #auction, #bid{
+    font-size: 1.8rem;
+  }
+  #main_card2{
+    height: 60vh;
+  }
+  #card_id{
+    height: 55vh;
+  }
+  #card2{
+    height: 29vh;
+  }
+  #round_id, #time_id{
+    font-size: 3rem;
+  }
+  #round, #time{
+    font-size: 7.5rem;
+  }
+  #start{
+    margin-top: 10px;
+    font-size: 4rem;
+    height: 15vh;
+  }
+  #next{
+    margin-top: 10px;
+    font-size: 1.8rem;
+    height: 6vh;
+  }
+  #bid_btn{
+    margin-top: 20px;
+    font-size: 4rem;
+    height: 20vh;
+  }
+  #table_header{
+    font-size: 2.5rem;
+  }
+  #row_id{
+    font-size: 2.5rem;
+    height: 48vh;
+  }
+} 
+
+@media (width:2559px) {
   body{
     height: 967px;
   }
@@ -227,10 +326,68 @@ nav{
   }
 }
 
+@media (width:2560px) {
+  body{
+    height: 1440px;
+  }
+  #main_card1{
+    height: 30vh;
+  }
+  #card1{
+    height: 28vh;
+  }
+  #main_card2{
+    height: 55vh;
+  }
+  #card_id{
+    height: 56vh;
+  }
+  #card2{
+    height: 29vh;
+  }
+  #start{
+    margin-top: 15px;
+    font-size: 6rem;
+    height: 15vh;
+  }
+  #next{
+    margin-top: 10px;
+    font-size: 2rem;
+    height: 7vh;
+  }
+  #bid_btn{
+    margin-top: 25px;
+    font-size: 6rem;
+    height: 22vh;
+  }
+  #round, #time{
+    font-size: 10rem;
+  }
+  #home, #auctioneer ,#result{
+    font-size: 3rem;
+  }
+  #title{
+    font-size: 3rem;
+  } 
+  #auction, #bid{
+    font-size: 2.5rem;
+  }
+  #table_header{
+    font-size: 3.5rem;
+  }
+  #row_id{
+    font-size: 4rem;
+    height: 49vh;
+  }
+  #round_id, #time_id{
+    font-size: 4.5rem;
+  }
+}
 /* ------------------ */
 
-
+/* responsive done for these resolutions */
 /* 1366*768 */
 /* 1920*1080 */
 /* 1440*537 */
+/* 2560 x 937 */
 /* 2560 x 1440 */
