--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,46 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&display=swap");
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html{
+html {
   height: 100%;
   font-size: 1rem; /* --changed-- */
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: rgb(255, 255, 255);
-  color:black;
+  color: black;
 }
-body{
+body {
   width: 100%;
   min-height: 100%;
 }
 
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
-  
-a{
-    text-decoration: none;
+
+a {
+  text-decoration: none;
 }
 
 /* ---------------- NavBar --------------- */
-.navigation{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px;
-    border-bottom: 3px solid lightgrey;
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  border-bottom: 3px solid lightgrey;
 }
 
-#navbar{
+#navbar {
   display: flex;
   justify-content: center;
 }
 
-#home{
+#home {
   margin-top: 15px;
   margin-left: 10px;
   margin-right: 10px;
@@ -48,15 +48,15 @@ a{
   font-weight: 600;
 }
 
-#auctioneer{
-  margin-top: 5px;
+#auctioneer {
+  margin-top: 15px;
   margin-right: 10px;
   font-size: 1.25rem; /* --changed-- */
   font-weight: 600;
 }
 
-#result{
-  margin-top: 10px;;
+#result {
+  margin-top: 10px;
   margin-left: 25px;
   font-size: 1.25rem; /* --changed-- */
   font-weight: 600;
@@ -67,25 +67,30 @@ a{
 }
 
 /* ---------------- Body --------------- */
-#card_id, #table_id{
+#card_id,
+#table_id {
   box-shadow: 5px 10px 18px #6b6a6a;
+  /* box-shadow: 26px 26px 20px -20px rgba(117, 117, 117, 1); */
+  border: 2px solid rgb(255, 255, 255); /* changes should removed--- */
 }
 
-#main_card1, #main_card2{
-  border: 2px solid rgb(255, 255, 255);
+#main_card1,
+#main_card2 {
+  border: 2px solid rgb(255, 255, 255); /* changes should removed--- */
   margin-top: 20px;
 }
 
 /* -- Static Part -- */
 
-#title{
+#title {
   font-size: 1rem; /* --changed-- */
   font-weight: 500;
   text-transform: uppercase;
   text-align: center;
 }
 
-#auction, #bid{
+#auction,
+#bid {
   font-size: 1rem; /* --changed-- */
   font-weight: 400;
   text-transform: capitalize;
@@ -93,25 +98,26 @@ a{
 
 /* -- Dynamic Part -- */
 
-#table_header{
+#table_header {
   font-size: 1.5rem; /* --changed-- */
   text-transform: uppercase;
 }
 
-#row_id{
+#row_id {
   font-size: 1.625rem; /* --changed-- */
   font-weight: 400;
   text-transform: capitalize;
 }
 
-#round_id, #time_id{
+#round_id,
+#time_id {
   font-size: 1.75rem; /* --changed-- */
   font-weight: 600;
   text-transform: uppercase;
   text-align: center;
 }
 
-#round{
+#round {
   font-size: 4rem; /* --changed-- */
   font-weight: 500;
   text-transform: uppercase;
@@ -119,7 +125,7 @@ a{
   color: rgb(220, 20, 20);
 }
 
-#time{
+#time {
   font-size: 4rem; /* --changed-- */
   font-weight: 500;
   text-transform: uppercase;
@@ -128,7 +134,7 @@ a{
   color: white;
 }
 
-#start{
+#start {
   margin-top: 5px;
   width: 100%;
   height: 10vh;
@@ -137,7 +143,7 @@ a{
   text-transform: uppercase;
 }
 
-#next{
+#next {
   margin-top: 5px;
   width: 100%;
   font-size: 1rem; /* --changed-- */
@@ -145,7 +151,7 @@ a{
   text-transform: uppercase;
 }
 
-#bid_btn{
+#bid_btn {
   margin-top: 8px;
   width: 100%;
   height: 16vh;
@@ -154,240 +160,263 @@ a{
   text-transform: uppercase;
 }
 
-
 /* -------------------------------------- Changes Starts Here --------------------------------------- */
 
-#card1{
+#card1 {
   height: 23vh;
   box-shadow: 5px 10px 18px #6b6a6a;
+  /* box-shadow: 26px 26px 20px -20px rgba(117, 117, 117, 1); */
 }
-#row_id{
+#row_id {
   height: 46vh;
 }
 
 /* -------Auctioneer & Bidder Page------- */
 
-@media (width:1440px) {
-  body{
+/* @media (width: 1440px) {
+  body {
     height: 537px;
   }
-  #home, #result, #auctioneer{
+  #home,
+  #result,
+  #auctioneer {
     font-size: 1rem;
   }
-  #main_card1{
+  #main_card1 {
     height: 25vh;
   }
-  #card1{
+  #card1 {
     height: 25vh;
   }
-  #title{
-    font-size: 0.9rem;
-  } 
-  #auction, #bid{
+  #title {
     font-size: 0.9rem;
   }
-  #main_card2{
+  #auction,
+  #bid {
+    font-size: 0.9rem;
+  }
+  #main_card2 {
     height: 52vh;
   }
-  #card_id{
+  #card_id {
     height: 52vh;
   }
-  #card2{
+  #card2 {
     height: 30vh;
   }
-  #round_id, #time_id{
+  #round_id,
+  #time_id {
     font-size: 1.25rem;
   }
-  #round, #time{
+  #round,
+  #time {
     font-size: 3.2rem;
   }
-  #start{
+  #start {
     font-size: 1.5rem;
     height: 10vh;
   }
-  #next{
+  #next {
     font-size: 1rem;
     height: 6vh;
   }
-  #table_header{
+  #table_header {
     font-size: 1.25rem;
   }
-  #row_id{
+  #row_id {
     font-size: 1.25rem;
     height: 43vh;
   }
-} 
+} */
 
-@media (width: 1920px) {
-  body{
-    height: 1080px;
+@media only screen and (max-width: 1920px) {
+  body {
+    background-color: rgb(255, 255, 255);
   }
-  #home, #result, #auctioneer{
+  #home,
+  #result,
+  #auctioneer {
     font-size: 2rem;
   }
-  #main_card1{
+  #main_card1 {
     height: 28vh;
   }
-  #card1{
+  #card1 {
     height: 25vh;
   }
-  #title{
-    font-size: 1.8rem;
-  } 
-  #auction, #bid{
+  #title {
     font-size: 1.8rem;
   }
-  #main_card2{
-    height: 60vh;
+  #auction,
+  #bid {
+    font-size: 1.8rem;
   }
-  #card_id{
+  #main_card2 {
     height: 55vh;
   }
-  #card2{
+  #card_id {
+    height: 53vh;
+  }
+  #card2 {
     height: 29vh;
   }
-  #round_id, #time_id{
-    font-size: 3rem;
-  }
-  #round, #time{
-    font-size: 7.5rem;
-  }
-  #start{
-    margin-top: 10px;
-    font-size: 4rem;
-    height: 15vh;
-  }
-  #next{
-    margin-top: 10px;
-    font-size: 1.8rem;
-    height: 6vh;
-  }
-  #bid_btn{
-    margin-top: 20px;
-    font-size: 4rem;
-    height: 20vh;
-  }
-  #table_header{
+  #round_id,
+  #time_id {
     font-size: 2.5rem;
   }
-  #row_id{
-    font-size: 2.5rem;
-    height: 48vh;
+  #round,
+  #time {
+    font-size: 6rem;
   }
-} 
-
-@media (width:2559px) {
-  body{
-    height: 967px;
-  }
-  #main_card1{
-    height: 30vh;
-  }
-  #card1{
-    height: 28vh;
-  }
-  #main_card2{
-    height: 55vh;
-  }
-  #card_id{
-    height: 54vh;
-  }
-  #card2{
-    height: 33vh;
-  }
-  #start{
+  #start {
+    margin-top: 10px;
     font-size: 4rem;
     height: 12vh;
   }
-  #next{
+  #next {
+    margin-top: 10px;
+    font-size: 2rem;
+    height: 6.5vh;
+  }
+  #bid_btn {
+    margin-top: 20px;
+    font-size: 4rem;
+    height: 18vh;
+  }
+  #table_header {
+    font-size: 2.5rem;
+  }
+  #row_id {
+    font-size: 2.5rem;
+    height: 44.2vh;
+  }
+}
+
+/* @media (width: 2559px) {
+  body {
+    height: 967px;
+  }
+  #main_card1 {
+    height: 30vh;
+  }
+  #card1 {
+    height: 28vh;
+  }
+  #main_card2 {
+    height: 55vh;
+  }
+  #card_id {
+    height: 54vh;
+  }
+  #card2 {
+    height: 33vh;
+  }
+  #start {
+    font-size: 4rem;
+    height: 12vh;
+  }
+  #next {
     font-size: 1.5rem;
     height: 5vh;
   }
-  #round, #time{
+  #round,
+  #time {
     font-size: 6.8rem;
   }
-  #home, #auctioneer ,#result{
+  #home,
+  #auctioneer,
+  #result {
     font-size: 2rem;
   }
-  #title{
-    font-size: 2rem;
-  } 
-  #auction, #bid{
+  #title {
     font-size: 2rem;
   }
-  #table_header{
+  #auction,
+  #bid {
+    font-size: 2rem;
+  }
+  #table_header {
     font-size: 2.5rem;
   }
-  #row_id{
+  #row_id {
     font-size: 2.5rem;
   }
-  #round_id, #time_id{
+  #round_id,
+  #time_id {
     font-size: 4rem;
   }
 }
 
-@media (width:2560px) {
-  body{
+@media (width: 2560px) {
+  body {
     height: 1440px;
   }
-  #main_card1{
+  #main_card1 {
     height: 30vh;
   }
-  #card1{
+  #card1 {
     height: 28vh;
   }
-  #main_card2{
+  #main_card2 {
     height: 55vh;
   }
-  #card_id{
+  #card_id {
     height: 56vh;
   }
-  #card2{
+  #card2 {
     height: 29vh;
   }
-  #start{
+  #start {
     margin-top: 15px;
     font-size: 6rem;
     height: 15vh;
   }
-  #next{
+  #next {
     margin-top: 10px;
     font-size: 2rem;
     height: 7vh;
   }
-  #bid_btn{
+  #bid_btn {
     margin-top: 25px;
     font-size: 6rem;
     height: 22vh;
   }
-  #round, #time{
+  #round,
+  #time {
     font-size: 10rem;
   }
-  #home, #auctioneer ,#result{
+  #home,
+  #auctioneer,
+  #result {
     font-size: 3rem;
   }
-  #title{
+  #title {
     font-size: 3rem;
-  } 
-  #auction, #bid{
+  }
+  #auction,
+  #bid {
     font-size: 2.5rem;
   }
-  #table_header{
+  #table_header {
     font-size: 3.5rem;
   }
-  #row_id{
+  #row_id {
     font-size: 4rem;
     height: 49vh;
   }
-  #round_id, #time_id{
+  #round_id,
+  #time_id {
     font-size: 4.5rem;
   }
-}
+} */
+
 /* ------------------ */
 
 /* responsive done for these resolutions */
-/* 1366*768 */
-/* 1920*1080 */
+/* **** 1366*768 ****** */
+/* **** 1920*1080 ***** */
+
+/* responsive not done for these resolutions */
 /* 1440*537 */
 /* 2560 x 937 */
 /* 2560 x 1440 */
