responsive touch up

--- a/css/style.css
+++ b/css/style.css
@@ -8,25 +8,19 @@
 
 html {
   height: 100%;
-  font-size: 1rem; /* --changed-- */
+  font-size: 1rem; 
   font-family: "Open Sans", sans-serif;
   background-color: rgb(255, 255, 255);
   color: black;
 }
 body {
   width: 100%;
+  background-color: rgb(255, 255, 255);
   min-height: 100%;
 }
 
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
 /* ---------------- NavBar --------------- */
+
 .navigation {
   display: flex;
   justify-content: space-between;
@@ -44,19 +38,25 @@ a {
   margin-top: 15px;
   margin-left: 10px;
   margin-right: 10px;
-  font-size: 1.25rem; /* --changed-- */
+  font-size: 1.5rem; /* --changed-- */
   font-weight: 600;
 }
 
 #auctioneer {
-  margin-top: 15px;
+  margin-top: 8px;
   margin-right: 10px;
-  font-size: 1.25rem; /* --changed-- */
+  font-size: 1.5rem; /* --changed-- */
+  font-weight: 600;
+}
+#bidder{
+  margin-top: 8px;
+  margin-right: 10px;
+  font-size: 1.5rem; /* --changed-- */
   font-weight: 600;
 }
 
 #result {
-  margin-top: 10px;
+  margin-top: 15px;
   margin-left: 25px;
   font-size: 1.25rem; /* --changed-- */
   font-weight: 600;
@@ -66,7 +66,7 @@ a {
   width: 15vw;
 }
 #logout {
-  margin-top: 0px;
+  margin-top: 2px;
   margin-left: 25px;
   font-size: 1.25rem; /* --changed-- */
   font-weight: 600;
@@ -76,60 +76,76 @@ a {
   width: 15vw;
 }
 
-
 /* ---------------- Body --------------- */
+
 #card_id,
 #table_id {
   box-shadow: 5px 10px 18px #6b6a6a;
-  /* box-shadow: 26px 26px 20px -20px rgba(117, 117, 117, 1); */
-  border: 2px solid rgb(255, 255, 255); /* changes should removed--- */
+  /* border: 1px solid rgb(100, 100, 100); */
 }
 
 #main_card1,
 #main_card2 {
-  border: 2px solid rgb(255, 255, 255); /* changes should removed--- */
+  border: 0px solid rgb(255, 255, 255); 
   margin-top: 20px;
 }
 
 /* -- Static Part -- */
 
+#card1 {
+  height: 24vh;
+  box-shadow: 5px 10px 18px #6b6a6a;
+}
+
 #title {
-  font-size: 1rem; /* --changed-- */
+  font-size: 1.1rem; 
   font-weight: 500;
   text-transform: uppercase;
   text-align: center;
+  color: #414040;
 }
 
 #auction,
 #bid {
-  font-size: 1rem; /* --changed-- */
+  font-size: 1.1rem; 
   font-weight: 400;
   text-transform: capitalize;
 }
 
 /* -- Dynamic Part -- */
-
+#main_card2{
+  height: 55vh; ;
+}
 #table_header {
-  font-size: 1.5rem; /* --changed-- */
+  font-size: 1.75rem;
   text-transform: uppercase;
+  color: #414040;
+}
+#row_id {
+  font-size: 2.5rem; 
+  font-weight: 300;
+  text-transform: capitalize;
+  height: 47vh;
 }
 
-#row_id {
-  font-size: 1.625rem; /* --changed-- */
-  font-weight: 400;
-  text-transform: capitalize;
+#card_id {
+  height: 55vh;
+}
+#card2 {
+  height: 30vh;
 }
 
 #round_id,
 #time_id {
-  font-size: 1.75rem; /* --changed-- */
-  font-weight: 600;
+  font-size: 1.75rem; 
+  font-weight: 700;
   text-transform: uppercase;
   text-align: center;
+  color: #414040;
 }
 
 #round {
-  font-size: 4rem; /* --changed-- */
+  font-size: 5rem;
   font-weight: 500;
   text-transform: uppercase;
   text-align: center;
@@ -137,7 +153,7 @@ a {
 }
 
 #time {
-  font-size: 4rem; /* --changed-- */
+  font-size: 5rem;
   font-weight: 500;
   text-transform: uppercase;
   text-align: center;
@@ -148,16 +164,16 @@ a {
 #start {
   margin-top: 5px;
   width: 100%;
-  height: 10vh;
-  font-size: 2rem; /* --changed-- */
-  font-weight: 500;
+  height: 15vh;
+  font-size: 2.5rem;
+  font-weight: 400;
   text-transform: uppercase;
 }
 
 #next {
   margin-top: 5px;
   width: 100%;
-  font-size: 1rem; /* --changed-- */
+  font-size: 1.2rem;
   font-weight: 500;
   text-transform: uppercase;
 }
@@ -165,88 +181,23 @@ a {
 #bid_btn {
   margin-top: 8px;
   width: 100%;
-  height: 16vh;
-  font-size: 2.25rem; /* --changed-- */
+  height: 20vh;
+  font-size: 2.25rem;
   font-weight: 500;
   text-transform: uppercase;
 }
 
-/* -------------------------------------- Changes Starts Here --------------------------------------- */
-
-#card1 {
-  height: 23vh;
-  box-shadow: 5px 10px 18px #6b6a6a;
-  /* box-shadow: 26px 26px 20px -20px rgba(117, 117, 117, 1); */
-}
-#row_id {
-  height: 46vh;
-}
-
 /* -------Auctioneer & Bidder Page------- */
 
-/* @media (width: 1440px) {
+/* @media only screen and (max-width: 1900px) {
   body {
-    height: 537px;
-  }
-  #home,
-  #result,
-  #auctioneer {
-    font-size: 1rem;
-  }
-  #main_card1 {
-    height: 25vh;
-  }
-  #card1 {
-    height: 25vh;
-  }
-  #title {
-    font-size: 0.9rem;
-  }
-  #auction,
-  #bid {
-    font-size: 0.9rem;
-  }
-  #main_card2 {
-    height: 52vh;
-  }
-  #card_id {
-    height: 52vh;
-  }
-  #card2 {
-    height: 30vh;
-  }
-  #round_id,
-  #time_id {
-    font-size: 1.25rem;
-  }
-  #round,
-  #time {
-    font-size: 3.2rem;
-  }
-  #start {
-    font-size: 1.5rem;
-    height: 10vh;
-  }
-  #next {
-    font-size: 1rem;
-    height: 6vh;
-  }
-  #table_header {
-    font-size: 1.25rem;
-  }
-  #row_id {
-    font-size: 1.25rem;
-    height: 43vh;
-  }
-} */
-
-@media only screen and (max-width: 1920px) {
-  body {
-    background-color: rgb(255, 255, 255);
+    max-height: 1000px;
+    background-color: rgb(129, 129, 129);
   }
   #home,
   #result{
     font-size: 2rem;
+    padding: 0px;
   }
   #auctioneer{
     margin-top: 8px;
@@ -254,33 +205,37 @@ a {
   }
   #logout{
     margin-top: 0px;
+    padding: 0px;
     font-size: 2rem;
   }
+  #title {
+    font-size: 2rem;
+    color: #414040;
+  }
+  #auction,
+  #bid {
+    font-size: 1.85rem;
+  }
   #main_card1 {
-    height: 28vh;
+    height: 26vh;
   }
   #card1 {
     height: 25vh;
   }
-  #title {
-    font-size: 1.8rem;
-  }
-  #auction,
-  #bid {
-    font-size: 1.8rem;
-  }
+
   #main_card2 {
-    height: 55vh;
+    height: 60vh;
   }
   #card_id {
-    height: 53vh;
+    height: 60vh;
   }
   #card2 {
-    height: 29vh;
+    height: 30vh;
   }
   #round_id,
   #time_id {
-    font-size: 2.5rem;
+    font-size: 2.8rem;
+    color: #414040;
   }
   #round,
   #time {
@@ -289,152 +244,28 @@ a {
   #start {
     margin-top: 10px;
     font-size: 4rem;
-    height: 12vh;
+    height: 19vh;
   }
   #next {
     margin-top: 10px;
     font-size: 2rem;
-    height: 6.5vh;
-  }
-  #bid_btn {
-    margin-top: 20px;
-    font-size: 4rem;
-    height: 18vh;
-  }
-  #table_header {
-    font-size: 2.5rem;
-  }
-  #row_id {
-    font-size: 2.5rem;
-    height: 45.5vh;
-  }
-}
-
-/* @media (width: 2559px) {
-  body {
-    height: 967px;
-  }
-  #main_card1 {
-    height: 30vh;
-  }
-  #card1 {
-    height: 28vh;
-  }
-  #main_card2 {
-    height: 55vh;
-  }
-  #card_id {
-    height: 54vh;
-  }
-  #card2 {
-    height: 33vh;
-  }
-  #start {
-    font-size: 4rem;
-    height: 12vh;
-  }
-  #next {
-    font-size: 1.5rem;
-    height: 5vh;
-  }
-  #round,
-  #time {
-    font-size: 6.8rem;
-  }
-  #home,
-  #auctioneer,
-  #result {
-    font-size: 2rem;
-  }
-  #title {
-    font-size: 2rem;
-  }
-  #auction,
-  #bid {
-    font-size: 2rem;
-  }
-  #table_header {
-    font-size: 2.5rem;
-  }
-  #row_id {
-    font-size: 2.5rem;
-  }
-  #round_id,
-  #time_id {
-    font-size: 4rem;
-  }
-}
-
-@media (width: 2560px) {
-  body {
-    height: 1440px;
-  }
-  #main_card1 {
-    height: 30vh;
-  }
-  #card1 {
-    height: 28vh;
-  }
-  #main_card2 {
-    height: 55vh;
-  }
-  #card_id {
-    height: 56vh;
-  }
-  #card2 {
-    height: 29vh;
-  }
-  #start {
-    margin-top: 15px;
-    font-size: 6rem;
-    height: 15vh;
-  }
-  #next {
-    margin-top: 10px;
-    font-size: 2rem;
-    height: 7vh;
+    height: 7Vh;
   }
   #bid_btn {
     margin-top: 25px;
-    font-size: 6rem;
-    height: 22vh;
+    font-size: 4rem;
+    height: 24vh;
   }
-  #round,
-  #time {
-    font-size: 10rem;
-  }
-  #home,
-  #auctioneer,
-  #result {
-    font-size: 3rem;
-  }
-  #title {
-    font-size: 3rem;
-  }
-  #auction,
-  #bid {
-    font-size: 2.5rem;
-  }
+
   #table_header {
-    font-size: 3.5rem;
+    font-size: 2.8rem;
+    color: #414040;
   }
   #row_id {
-    font-size: 4rem;
-    height: 49vh;
+    font-size: 2.8rem;
+    height: 45.8vh;
   }
-  #round_id,
-  #time_id {
-    font-size: 4.5rem;
-  }
-} */
+}  */
+
 
 /* ------------------ */
-
-/* responsive done for these resolutions */
-/* **** 1366*768 ****** */
-/* **** 1920*1080 ***** */
-
-/* responsive not done for these resolutions */
-/* 1440*537 */
-/* 2560 x 937 */
-/* 2560 x 1440 */
